# obs-fly-scoreboard

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  buildspec.json
.github/scripts/: Build-Windows.ps1
.github/workflows/: pages.yml  release.yml
build-aux/: run-gersemi
data/overlay/: index.html  plugin.json  script.js  style.css
docs/: _config.yml  changelog.md  development.md  faq.md  getting-started.md  hotkeys.md  index.html  index.md  overlay.md  settings.md  troubleshooting.md  usage.md
docs/_includes/: glass-hero.html  head-custom.html  support-button.html
docs/assets/css/: custom.scss  style.css
docs/assets/js/: app.js
installer/: fly-scoreboard-installer.nsi
src/: fly_score_dock.cpp  fly_score_fields_dialog.cpp  fly_score_hotkeys.cpp  fly_score_hotkeys_dialog.cpp  fly_score_kofi_widget.cpp  fly_score_logo_helpers.cpp  fly_score_obs_helpers.cpp  fly_score_paths.cpp  fly_score_plugin.cpp  fly_score_qt_helpers.cpp  fly_score_server.cpp  fly_score_settings_dialog.cpp  fly_score_state.cpp  fly_score_teams_dialog.cpp  fly_score_timers_dialog.cpp  seed_defaults.cpp  server.cpp  widget.cpp  widgets.cpp
src/include/: config.hpp  fly_score_const.hpp  fly_score_dock.hpp  fly_score_fields_dialog.hpp  fly_score_hotkeys.hpp  fly_score_hotkeys_dialog.hpp  fly_score_kofi_widget.hpp  fly_score_log.hpp  fly_score_logo_helpers.hpp  fly_score_obs_helpers.hpp  fly_score_paths.hpp  fly_score_qt_helpers.hpp  fly_score_server.hpp  fly_score_settings_dialog.hpp  fly_score_state.hpp  fly_score_teams_dialog.hpp  fly_score_timers_dialog.hpp  seed_defaults.hpp  server.hpp  widgets.hpp
